--- a/.github/workflows/deploy_to_gke.yml
+++ b/.github/workflows/deploy_to_gke.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           kubectl set image deployment/$FRONTEND_DEPLOYMENT_NAME sveltekit-container=gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA
           kubectl set image deployment/$BACKEND_DEPLOYMENT_NAME nestjs-container=gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA
-          kubeclt set image deployment/rabbitmq-deployment rabbitmq-container=gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA
+          kubectl set image deployment/rabbitmq-deployment rabbitmq-container=gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA
           kubectl rollout restart deployment/$FRONTEND_DEPLOYMENT_NAME
           kubectl rollout restart deployment/$BACKEND_DEPLOYMENT_NAME
           kubectl rollout restart deployment/rabbitmq-deployment
