--- a/apps/queue/prodConfig/rabbitmq-deploy.yml
+++ b/apps/queue/prodConfig/rabbitmq-deploy.yml
@@ -15,8 +15,19 @@ spec:
         app: rabbitmq
     spec:
       containers:
-        - name: rabbitmq-container
-          image: gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA
-          ports:
-            - containerPort: 5672 # RabbitMQ
-            - containerPort: 15672 # Management UI
+      - name: rabbitmq-container
+        image: gcr.io/$PROJECT_ID/rabbitmq:$GITHUB_SHA
+        ports:
+          - containerPort: 5672
+          - containerPort: 15672
+        env:
+          - name: RABBITMQ_DEFAULT_USER
+            valueFrom:
+              secretKeyRef:
+                name: rabbitmq-secret
+                key: RABBITMQ_DEFAULT_USER
+          - name: RABBITMQ_DEFAULT_PASS
+            valueFrom:
+              secretKeyRef:
+                name: rabbitmq-secret
+                key: RABBITMQ_DEFAULT_PASS
