--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -1,16 +1,15 @@
 FROM node:lts-alpine
 WORKDIR /app
 
-EXPOSE 3001
-
 COPY apps/shared apps/shared
-COPY apps/api apps/api
+COPY apps/worker apps/worker
 COPY package.json .
 COPY tsconfig*.json .
 
 RUN npm i
 RUN npm install -g typescript
 RUN tsc -b apps/shared
-RUN npm run api:build
 
-CMD npm run api:start
+RUN npm run libs:build
+
+CMD npm run worker:start
