--- a/.github/workflows/deploy_to_gke.yml
+++ b/.github/workflows/deploy_to_gke.yml
@@ -1,6 +1,8 @@
 name: Deploy to GKE
-on: [push]
-
+on:
+  push:
+    branches:
+      - main
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: area-cluster
